--- a/resume.tex
+++ b/resume.tex
@@ -7,45 +7,44 @@
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
-\name{Bin Yuan}
+\name{Yuanyuan Xia}
 
 \basicInfo{
-  \email{yuanbin2014@gmail.com} \textperiodcentered\ 
-  \phone{(+86) 131-221-87xxx} \textperiodcentered\ 
-  \linkedin[billryan8]{https://www.linkedin.com/in/billryan8}}
+  \email{xiayuan.y@foxmail.com} \textperiodcentered\ 
+  \phone{(+86) 188-4260-4162} \textperiodcentered\ 
+  \linkedin[billryan8]{https://cwuyi.me}}
 
 \section{\faGraduationCap\ Education}
-\datedsubsection{\textbf{Shanghai Jiao Tong University (SJTU)}, Shanghai, China}{2013 -- Present}
-\textit{Master student} in Electronics Engineering (EE), expected March 2016
-\datedsubsection{\textbf{Xidian University}, Shaanxi, China}{2009 -- 2013}
-\textit{B.S.} in Electronics Engineering (EE)
+\datedsubsection{\textbf{Dalian University of Technology (DLUT)}, Dalian, China}{2015 -- Present}
+\textit{Master student} in Infomation System (IS), expected July 2018
+\datedsubsection{\textbf{Dalian Polytechnic University (DPU)}, Dalian, China}{2011 -- 2015}
+\textit{B.S.} in Infomation System (IS)
 
 \section{\faUsers\ Experience}
-\datedsubsection{\textbf{FLAG Inc.} California, America}{2012 -- Present}
-\role{Summer Intern}{Manager: xxx}
-Brief introduction: xxx.
+\datedsubsection{\textbf{Meituan Inc.} Beijing, China}{2017.04 -- Present}
+\role{Development Engineer Intern}
+Brief introduction: Participate in building Meituan delivery open platform system
 \begin{itemize}
-  \item Implemented xxx feature
-  \item Optimized xxx 5\%
-  \item xxx
+  \item Implemented order management and third party account feature
+  \item Optimized OpenAPI interface performance
+  \item Interface idempotent transformation
 \end{itemize}
 
-\datedsubsection{\textbf{xxx Projects}}{Jan. 2015 -- Present}
-\role{C, Python, Django, Linux}{Individual Projects, collaborated with xxx}
-Brief introduction: xxx
+\datedsubsection{\textbf{CSCES Labor administration system Projects}}{Jun. 2016 -- Sep.2016}
+\role{Team leader}{Outsourcing Projects}
+Brief introduction: An online employee management system
 \begin{itemize}
-  \item Implemented xxx feature
-  \item Optimized xxx 5\%
-  \item xxx
+  \item Implemented staff management, attendance management etc. feature
+  \item Standard SSH framework
+  \item Stable operation of the site
 \end{itemize}
 
-\datedsubsection{\textbf{\LaTeX\ résumé template}}{May. 2015 -- Present}
-\role{\LaTeX, Maintainer}{Individual Projects}
-An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
+\datedsubsection{\textbf{Academic research}}{Sep. 2015 -- Present}
+\role{Researcher}{Master's research topic}
+Research on Text Similarity Calculation Method in Community Q & A System
 \begin{itemize}
-  \item Easy to be further customized or extended
-  \item Full support for unicode characters (e.g. CJK) with \XeLaTeX\
-  \item FontAwesome 4.5.0 support
+  \item Improve the accuracy of text similarity calculation
+  \item A research paper has been published
 \end{itemize}
 
 % Reference Test
@@ -57,19 +56,19 @@ An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
 
 \section{\faCogs\ Skills}
 \begin{itemize}[parsep=0.5ex]
-  \item Programming Languages: C == Python > C++ > Java
+  \item Programming Languages: Java > Python > C/C++
   \item Platform: Linux
-  \item Development: Web, xxx
+  \item Development: Web
 \end{itemize}
 
 \section{\faHeartO\ Honors and Awards}
-\datedline{\textit{\nth{1} Prize}, Award on xxx }{Jun. 2013}
-\datedline{Other awards}{2015}
+\datedline{\textit{\nth{1} Prize}, Award on Dalian Mathematical Contest }{Jun. 2013}
+\datedline{\textit{\nth{3} Prize}, Award on Dalian University of Technology Mathematical Contest }{Sep. 2016}
 
 \section{\faInfo\ Miscellaneous}
 \begin{itemize}[parsep=0.5ex]
-  \item Blog: http://your.blog.me
-  \item GitHub: https://github.com/username
+  \item Blog: http://cwuyi.me
+  \item GitHub: https://github.com/dut-xiayuan
   \item Languages: English - Fluent, Mandarin - Native speaker
 \end{itemize}
 
