--- a/resume.tex
+++ b/resume.tex
@@ -41,7 +41,7 @@ Brief introduction: An online employee management system
 
 \datedsubsection{\textbf{Academic research}}{Sep. 2015 -- Present}
 \role{Researcher}{Master's research topic}
-Research on Text Similarity Calculation Method in Community Q & A System
+Research on Text Similarity Calculation Method in Community Q \& A System
 \begin{itemize}
   \item Improve the accuracy of text similarity calculation
   \item A research paper has been published
