--- a/resume.tex
+++ b/resume.tex
@@ -12,17 +12,16 @@
 \basicInfo{
   \email{xiayuan.y@foxmail.com} \textperiodcentered\ 
   \phone{(+86) 188-4260-4162} \textperiodcentered\ 
-  \linkedin[billryan8]{https://cwuyi.me}}
 
 \section{\faGraduationCap\ Education}
-\datedsubsection{\textbf{Dalian University of Technology (DLUT)}, Dalian, China}{2015 -- Present}
+\datedsubsection{\textbf{Dalian University of Technology (DLUT)}, Dalian, China}{Sep. 2015 -- Present}
 \textit{Master student} in Infomation System (IS), expected July 2018
-\datedsubsection{\textbf{Dalian Polytechnic University (DPU)}, Dalian, China}{2011 -- 2015}
+\datedsubsection{\textbf{Dalian Polytechnic University (DPU)}, Dalian, China}{Sep. 2011 -- Jul. 2015}
 \textit{B.S.} in Infomation System (IS)
 
-\section{\faUsers\ Experience}
-\datedsubsection{\textbf{Meituan Inc.} Beijing, China}{2017.04 -- Present}
-\role{Development Engineer Intern}
+\section{\faUsers\ Experience }
+\datedsubsection{\textbf{Meituan Inc.} Beijing, China}{Apr. 2017 -- Aug. 2017}
+\role{Development Engineer Intern }
 Brief introduction: Participate in building Meituan delivery open platform system
 \begin{itemize}
   \item Implemented order management and third party account feature
@@ -30,7 +29,7 @@ Brief introduction: Participate in building Meituan delivery open platform syste
   \item Interface idempotent transformation
 \end{itemize}
 
-\datedsubsection{\textbf{CSCES Labor administration system Projects}}{Jun. 2016 -- Sep.2016}
+\datedsubsection{\textbf{CSCES Labor administration system projects}}{Jun. 2016 -- Sep. 2016}
 \role{Team leader}{Outsourcing Projects}
 Brief introduction: An online employee management system
 \begin{itemize}
