--- a/resume.tex
+++ b/resume.tex
@@ -11,7 +11,7 @@
 
 \basicInfo{
   \email{xiayuan.y@foxmail.com} \textperiodcentered\ 
-  \phone{(+86) 188-4260-4162} \textperiodcentered\ 
+  \phone{(+86) 188-4260-4162}}
 
 \section{\faGraduationCap\ Education}
 \datedsubsection{\textbf{Dalian University of Technology (DLUT)}, Dalian, China}{Sep. 2015 -- Present}
