--- a/resume.tex
+++ b/resume.tex
@@ -22,7 +22,7 @@
 \section{\faUsers\ Experience }
 \datedsubsection{\textbf{Meituan Inc.} Beijing, China}{Apr. 2017 -- Aug. 2017}
 \role{Development Engineer Intern}
-Brief introduction: Participate in building Meituan delivery open platform system
+Brief introduction: Participate in building Meituan open platform system
 \begin{itemize}
   \item Implemented order management and third party account feature
   \item Optimized OpenAPI interface performance
