--- a/resume.tex
+++ b/resume.tex
@@ -21,7 +21,7 @@
 
 \section{\faUsers\ Experience }
 \datedsubsection{\textbf{Meituan Inc.} Beijing, China}{Apr. 2017 -- Aug. 2017}
-\role{Development Engineer Intern}
+\role{Development Engineer Intern}{Manager: Yongjun Yin}
 Brief introduction: Participate in building Meituan open platform system
 \begin{itemize}
   \item Implemented order management and third party account feature
