--- a/resume.tex
+++ b/resume.tex
@@ -56,8 +56,10 @@ Research on Text Similarity Calculation Method in Community Q \& A System
 \section{\faCogs\ Skills}
 \begin{itemize}[parsep=0.5ex]
   \item Programming Languages: Java > Python > C/C++
+  \item Software Framework: Spring, Mybatis, Hibernate etc.
+  \item Teamwork: Git, Maven etc.
   \item Platform: Linux
-  \item Development: Web
+  \item Development: Web,Desktop
 \end{itemize}
 
 \section{\faHeartO\ Honors and Awards}
