--- a/resume.tex
+++ b/resume.tex
@@ -15,7 +15,7 @@
 \datedsubsection{\textbf{Dalian University of Technology (DUT)}, Dalian, China}{SEP. 2015 -- JUN. 2018}
 \textit{M.S.} in Information System
 \datedsubsection{\textbf{Dalian Polytechnic University (DPU)}, Dalian, China}{SEP. 2011 -- JUL. 2015}
-\textit{B.S.} in Information Management & Information System
+\textit{B.S.} in Information Management \& Information System
 
 \section{\faUsers\ Experience }
 \datedsubsection{\textbf{Envision Energy} Shanghai, China}{NOV. 2017 -- Present}
@@ -24,7 +24,7 @@
 \begin{itemize}
   \item Delicate system design for rule engine to make it reach a high stability and throughput
   \item Build a subscription service from bottom to up
-  \item Manage the base service of Kafka & Zookeeper, include user guidance and troubleshooting
+  \item Manage the base service of Kafka \& Zookeeper, include user guidance and troubleshooting
 \end{itemize}
 
 \datedsubsection{\textbf{Rule Engine Projects}}{JUL. 2018 -- Present}
