--- a/resume.tex
+++ b/resume.tex
@@ -29,6 +29,7 @@ Brief introduction: Responsible for building rule engine service and data subscr
 
 \datedsubsection{\textbf{Rule Engine Projects}}{JUL. 2018 -- Present}
 \role{IoT basement, SQL-like Parser \& Executor, TSDB, Redis, Kafka, High Throughput}
+xxx
 \begin{itemize}
   \item Participate and be responsible for the development and iteration of the rule engine of the IoT platform
   \item Design and implement SQL-like interpreter, Users can forward the required device data to the destination by writing SQL-like expressions, Such as TSDB, Redis, Kafka Topic, Streaming Input, etc.
@@ -37,6 +38,7 @@ Brief introduction: Responsible for building rule engine service and data subscr
 
 \datedsubsection{\textbf{Data Subscription Projects}}{OCT. 2018 -- Present}
 \role{Data Subscription, Netty, Websocket, Protobuf, Kafka}
+xxx
 \begin{itemize}
     \item Responsible for and participate in the subscription service of IoT platform data
     \item The project consists of subscription Meta service, subscription Server and Client, Users can describe subscription requirements through the Meta service, Use the Client SDK (Java/Python/C#) provided by the application to initiate a subscription to the Server.
@@ -46,6 +48,7 @@ Brief introduction: Responsible for building rule engine service and data subscr
 
 \datedsubsection{\textbf{Middleware Service}}{JUN. 2019 -- Present}
 \role{Kafka, Kafka Client SDK, Zookeeper, Microservices}
+xxx
 \begin{itemize}
     \item Responsible for the platform's message queue service, Have a detailed reading and understanding of the specific implementation of Kafka and RocketMQ
     \item Encapsulate the native client of Kafka and RocketMQ to facilitate quick access to the MQ service inside the platform
