--- a/resume.tex
+++ b/resume.tex
@@ -28,7 +28,7 @@ Brief introduction: Responsible for building rule engine service and data subscr
 \end{itemize}
 
 \datedsubsection{\textbf{Rule Engine Projects}}{JUL. 2018 -- Present}
-\role{IoT basement, SQL-like Parser \& Executor, TSDB, Redis, Kafka, High Throughput}
+\role{IoT basement, SQL-like Parser \& Executor, TSDB, Redis, Kafka, High Throughput}{}
 IoT Base Service
 \begin{itemize}
   \item Participate and be responsible for the development and iteration of the rule engine of the IoT platform
@@ -37,7 +37,7 @@ IoT Base Service
 \end{itemize}
 
 \datedsubsection{\textbf{Data Subscription Projects}}{OCT. 2018 -- Present}
-\role{Data Subscription, Netty, Websocket, Protobuf, Kafka}
+\role{Data Subscription, Netty, Websocket, Protobuf, Kafka}{}
 Data transmission
 \begin{itemize}
     \item Responsible for and participate in the subscription service of IoT platform data
@@ -47,7 +47,7 @@ Data transmission
 \end{itemize}
 
 \datedsubsection{\textbf{Middleware Service}}{JUN. 2019 -- Present}
-\role{Kafka, Kafka Client SDK, Zookeeper, Microservices}
+\role{Kafka, Kafka Client SDK, Zookeeper, Microservices}{}
 Middleware
 \begin{itemize}
     \item Responsible for the platform's message queue service, Have a detailed reading and understanding of the specific implementation of Kafka and RocketMQ
