--- a/resume.tex
+++ b/resume.tex
@@ -19,7 +19,7 @@
 
 \section{\faUsers\ Experience }
 \datedsubsection{\textbf{Envision Energy} Shanghai, China}{NOV. 2017 -- Present}
-\role{Senior Software Engineer}
+\role{Senior Software Engineer}{}
 Brief introduction: Responsible for building rule engine service and data subscription service for IoT platform and managing the middleware service(Kafka \& Zookeeper)
 \begin{itemize}
   \item Delicate system design for rule engine to make it reach a high stability and throughput
