--- a/resume.tex
+++ b/resume.tex
@@ -65,8 +65,8 @@ Middleware
 \end{itemize}
 
 \section{\faHeartO\ Honors and Awards}
-\datedline{\textit{\nth{1} Prize}, Award on Dalian Mathematical Contest }{Jun. 2013}
-\datedline{\textit{\nth{3} Prize}, Award on Dalian University of Technology Mathematical Contest }{Sep. 2016}
+\datedline{\textit{\nth{3} Prize}, Award on Dalian University of Technology Mathematical Contest }{SEP. 2016}
+\datedline{\textit{Top Performance}, Top 5\% outstanding employees }{DEC. 2019}
 
 \section{\faInfo\ Miscellaneous}
 \begin{itemize}[parsep=0.5ex]
