--- a/resume.tex
+++ b/resume.tex
@@ -66,7 +66,8 @@ Middleware
 
 \section{\faHeartO\ Honors and Awards}
 \datedline{\textit{\nth{3} Prize}, Award on Dalian University of Technology Mathematical Contest }{SEP. 2016}
-\datedline{\textit{Top Performance}, Top 5\% outstanding employees }{DEC. 2019}
+\datedline{\textit{Top Performance}, Top 25\% of academic performance of graduate student }{JUN. 2018}
+\datedline{\textit{Top Performance}, Excellent staff }{MAY. 2019}
 
 \section{\faInfo\ Miscellaneous}
 \begin{itemize}[parsep=0.5ex]
