change contact email

--- a/resume.tex
+++ b/resume.tex
@@ -8,7 +8,7 @@
 \name{Yuanyuan Xia}
 
 \basicInfo{
-  \email{xiayuan.y@foxmail.com} \textperiodcentered\ 
+  \email{xiayuan1992@gmail.com} \textperiodcentered\
   \phone{(+86) 188-4260-4162}}
 
 \section{\faGraduationCap\ Education}
@@ -71,7 +71,7 @@ Middleware
 
 \section{\faInfo\ Miscellaneous}
 \begin{itemize}[parsep=0.5ex]
-  \item Blog: http://wuyi.me
+  \item Blog: https://wuyi.me
   \item GitHub: https://github.com/dut-xiayuan
   \item Languages: English - Fluent, Mandarin - Native speaker
 \end{itemize}
