add english name

--- a/resume.tex
+++ b/resume.tex
@@ -5,7 +5,7 @@
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
-\name{Yuanyuan Xia}
+\name{Yuanyuan(Walker) Xia}
 
 \basicInfo{
   \email{xiayuan1992@gmail.com} \textperiodcentered\
