--- a/resume-zh.tex
+++ b/resume-zh.tex
@@ -3,13 +3,12 @@
 % !Mode:: "TeX:UTF-8"
 
 \documentclass{resume}
-\usepackage{zh_CN-Adobefonts_external} % Simplified Chinese Support using external fonts (./fonts/zh_CN-Adobe/)
-%\usepackage{zh_CN-Adobefonts_internal} % Simplified Chinese Support using system fonts
-\usepackage{linespacing_fix} % disable extra space before next section
+\usepackage{zh_CN-Adobefonts_external}
+\usepackage{linespacing_fix}
 \usepackage{cite}
 
 \begin{document}
-\pagenumbering{gobble} % suppress displaying page number
+\pagenumbering{gobble}
 
 \name{夏远远}
 
@@ -18,48 +17,57 @@
   \phone{(+86) 188-4260-4162}}
  
 \section{\faGraduationCap\  教育背景}
-\datedsubsection{\textbf{大连理工大学}, 大连}{2015.09 -- 至今}
-\textit{在读硕士研究生}\ 信息管理与电子政务, 预计 2018 年 6 月毕业
+\datedsubsection{\textbf{大连理工大学}, 大连}{2015.09 -- 2018.06}
+\textit{硕士} 信息管理与电子政务
 \datedsubsection{\textbf{大连工业大学}, 大连}{2011.09 -- 2015.06}
-\textit{学士}\ 信息管理与信息系统
+\textit{学士} 信息管理与信息系统
 
-\section{\faUsers\ 实习/项目经历}
+\section{\faUsers\ 项目经历}
 
-\datedsubsection{\textbf{中建八局大连分公司劳务管理系统}}{2016年6月 -- 2016年9月}
-\role{项目负责人，主R}{劳务员工管理系统}
-\begin{onehalfspacing}
-组建4人开发团队，包括后端2人，前端1人，UI设计1人；负责沟通业务逻辑、设计系统架构、功能模块划分和部分模块的开发工作；系统采用Spring+Spring MVC+MyBatis的设计实现，使用Tomcat作为web容器，使用SVN作为版本控制工具；经过开发建设，已迭代多个版本，交付后在线稳定运行一年左右。
+\datedsubsection{\textbf{远景能源}}{2017年11月 -- 现在}
+\role{高级工程师}{}
+负责为物联网平台构建规则引擎服务和数据订阅服务，并负责Kafka和Zookeeper集群
 \begin{itemize}
-  \item 分模块开发，加快开发速度
-  \item 使用Redis作为MyBatis二级cache，缓存频繁查询项
-  \item 使用spring提供的quartz实现，定时发送出勤统计日报邮件
-\end{itemize}
-\end{onehalfspacing}
-
-\datedsubsection{\textbf{美团点评} 北京}{2017年4月 -- 2017年7月}
-\role{实习}{后台开发}
-通过暑期实习招聘进入美团点评餐饮平台-配送开放平台团队；参与开放平台后台的开发建设工作，负责业务功能模块以及运营后台的开发工作；学习成熟互联网产品的开发过程，参与完整的项目沟通、技术方案设计、方案评审、开发、提测和上线的流程；实习过程中认识到自己的不足，强化了不断学习的意愿。
-\begin{itemize}
-  \item 异步实现批量平台账号创建，提供进度轮询的后端接口
-  \item 实现具有限流功能的文字地址转坐标接口
-  \item 完善开放平台API接口幂等性
+  \item 对规则引擎做良好的系统设计，达到高稳定和高吞吐
+  \item 完整的设计和实现物联网平台的数据订阅系统
+  \item 管理和维护平台基础的kafka和zookeeper服务，包括了用户答疑和troubleshooting
 \end{itemize}
 
-\datedsubsection{\textbf{问答系统中的文本相似度计算}}{2015 年9月 -- 至今}
-\role{个人研究课题}
-\begin{onehalfspacing}
-课题的出发点是通过文本相似度计算，提高用户从问答系统中获取知识的效率。主要技术手段是使用翻译模型和HNC词汇语义理论，在规模语料集上训练文本翻译概率，将高准确度的翻译概率运用到翻译模型中去，同时使用HNC理论修正翻译模型结果，返回与用户查询相似度较高的问答内容。
+\datedsubsection{\textbf{规则引擎项目}}{2018年7月 -- 现在}
+\role{IoT basement, SQL-like Parser \& Executor, TSDB, Redis, Kafka, High Throughput}{}
+IoT平台基础服务
 \begin{itemize}
-  \item 提高5\%的特定领域的文本计算结果准确性
-  \item 将翻译模型引入社区问答系统
-  \item 形成成果论文发表
+  \item 参与和负责物联网平台规则引擎的开发和迭代
+  \item 设计和实现类SQL解释执行器，用户可以通过编写类SQL表达式，将需要的设备数据转发至目的地，例如TSDB、Redis、Kafka Topic、Streaming Input等
+  \item 目前日均处理上百亿设备点数据，日均数据吞吐量数十TB
 \end{itemize}
-\end{onehalfspacing}
+
+\datedsubsection{\textbf{数据订阅服务}}{2018 年10月 -- 至今}
+\role{Data Subscription, Netty, Websocket, Protobuf, Kafka}{}
+数据传输服务
+\begin{itemize}
+  \item 负责和参与物联网平台数据的订阅服务
+  \item 项目由订阅Meta服务、订阅Server和Client组成，用户可以通过Meta服务描述订阅需求，使用应用提供的Client SDK(Java/Python/C#)向Server发起订阅
+  \item 保证订阅数据的完整可靠，C/S通信使用建立在Protobuf之上的自定义的二进制协议，网络IO构建在Netty的基础上
+  \item 单实例(2C4G)Server数据处理能力在2w Messages/sec，C/S吞吐在5w Messages/sec，通过支持Websocket
+\end{itemize}
+
+\datedsubsection{\textbf{中间件服务}}{2019 年6月 -- 至今}
+\role{Kafka, Kafka Client SDK, Zookeeper, Microservices}{}
+中间件
+\begin{itemize}
+    \item 负责平台的消息队列服务，对Kafka、RocketMQ具体实现有比较细致的阅读和了解
+    \item 封装Kafka、RocketMQ的原生客户端，便于平台内部快速接入MQ服务
+    \item 维护平台Zookeeper服务，处理日常使用问题
+    \item 构建MQ、Zookeeper的监控告警Metric
+    \item 封装Dubbo服务适应平台内部的环境，跟踪社区微服务框架的进展，负责日常的使用问题解答和解决bug
+\end{itemize}
 
 \section{\faCogs\ IT 技能}
 \begin{itemize}[parsep=0.5ex]
-  \item 编程语言: Java > C == Python > C++
-  \item 平台: Linux, Windows
+  \item 编程语言: Java, Python, C/C++
+  \item 大数据: Apache Kafka, Apache Zookeeper
+  \item 平台: Linux
   \item 开发: Java Web
 \end{itemize}
 
@@ -74,10 +82,8 @@
 
 \section{\faInfo\ 其他}
 \begin{itemize}[parsep=0.5ex]
-  \item 技术博客: https://cwuyi.me
+  \item 技术博客: https://wuyi.me
   \item GitHub: https://github.com/dut-xiayuan
-  \item 四级: 560分
-  \item 六级: 490分
 \end{itemize}
 
 \end{document}
