--- a/resume.tex
+++ b/resume.tex
@@ -28,7 +28,7 @@ Brief introduction: Responsible for building rule engine service and data subscr
 \end{itemize}
 
 \datedsubsection{\textbf{Rule Engine Projects}}{JUL. 2018 -- Present}
-\role{IoT basement, SQL-like Parser \& Executor, TSDB, Redis, Kafka, High Throughput}{}
+\role{IoT, SQL-like Parser \& Executor, TSDB, Redis, Kafka, High Throughput}{}
 IoT Base Service
 \begin{itemize}
   \item Participate and be responsible for the development and iteration of the rule engine of the IoT platform
